# python_day071_blog

./: .gitignore  forms.py  main.py  pyproject.toml
day_071/: pyvenv.cfg
templates/: header.html  index.html  login.html  post.html  register.html
