[project]
name = "day-071-deploy"
version = "0.1.0"
description = ""
authors = [
    {name = "kdanielw",email = "kdanielalvesw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "bootstrap-flask (>=2.5.0,<3.0.0)",
    "flask-ckeditor (>=1.0.0,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "wtforms[email] (>=3.2.1,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "bleach (>=6.2.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
